--- a/src/index.html
+++ b/src/index.html
@@ -621,8 +621,12 @@
             <p class="foot__text">2022 all rights reserved</p>
         </section>
 
-        <!-- <script type="module" src="js/data.js"></script> -->
-        <!-- <script type="module" src="js/patterns.js"></script> -->
+        <img class="webpack__plug" src="images/portfolio01.jpg" />
+        <img class="webpack__plug" src="images/portfolio02.jpg" />
+        <img class="webpack__plug" src="images/portfolio03.jpg" />
+        <img class="webpack__plug" src="images/portfolio04.jpg" />
+        <img class="webpack__plug" src="images/portfolio05.jpg" />
+        <img class="webpack__plug" src="images/portfolio06.jpg" />
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script src="js/pagination.js"></script>
         <script src="js/navigation.js"></script>
